fix: hide rst versions on small screen

--- a/static/css/head.css
+++ b/static/css/head.css
@@ -61,7 +61,6 @@
 }
 
 .sy-head-actions > .rst-versions {
-  display: block;
   position: relative;
   width: auto;
   background: transparent;
